# public-remote-test

./: .gitignore  .gitlab-ci.yml  README.md  deploy_gh_pages.sh  fetch_remote.sh  mkdocs.yml  pyproject.toml
.github/workflows/: push-to-remote.yml
docs/: index.html
src/: index.html  index.md
