[tool.poetry]
name = "public-remote-test"
version = "0.0.1"
description = "Demonstrate how to sync changes between public and internal repositories"
authors = ["Marion Deveaud <marion.deveaud@siemens.com>"]

[[tool.poetry.source]]
name = "mkdocs"
url = "https://code.siemens.com/api/v4/projects/64538/packages/pypi/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-code-siemens-code-docs-theme = "^1.3.4"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"